@@ -1,3 +1,11 @@
+2009-01-16  Sven Herzberg  <sven@imendio.com>
+
+	Added proper and distinguishable logging domains
+
+	* engine/Makefile.am,
+	* server/Makefile.am: set the logging domains to "sapwood-server" and
+	"sapwood-engine"
+
 2009-01-09  Sven Herzberg  <sven@imendio.com>
 
 	Be able to choose the depth of the pixmap by providing a colormap
